# demo-apps

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: schedule_lambda.yml
ai-monitoring/: .env.example  Dockerfile.ollama-model-a  Dockerfile.ollama-model-b  README.md  docker-compose.yml
ai-monitoring/ai-agent/: .dockerignore  Dockerfile  README.md  app.py  cache.py  langchain_agent.py  mcp_tools.py  models.py  observability.py  prompt_pool.py  prompts.py  requirements.txt  workflows.py
ai-monitoring/flask-ui/: Dockerfile  README.md  app.py  config.py  newrelic.ini  requirements.txt  wsgi.py
ai-monitoring/locust-tests/: Dockerfile  README.md  locustfile.py  requirements.txt
ai-monitoring/mcp-server/: Dockerfile  README.md  config.py  newrelic.ini  (+2 more)
apm-lambda-convergence/: README.md  cloudformation.yaml  deploy.sh  docker-compose.yml
azure-func-sql/: .funcignore  .gitignore  README.md  function_app.py  host.json  requirements.txt
azure-mssql/: README.md  docker-compose.yml  run_stored_procedures.sh
eapm-minikube/: README.md
eapm-minikube/api-gateway/: Cargo.toml
ebpf-microservices/: README.md  docker-compose.yml
kafka-msk/: Dockerfile  README.md  package_deploy.py  pom.xml
outlier-detection/: README.md  main.tf  normal_load_user_data.sh  outlier_load_user_data.sh  terraform.tfvars.example  variables.tf
ruby-apm/: .env.sample  Dockerfile.frontend  Dockerfile.inventory_service  Dockerfile.loadgen  Dockerfile.user_service  README.md  docker-compose.yml
tf/: main.tf  variables.tf
web/: template.yaml
(+120 files in other folders)
